Column Sorting + Icon fix + Toggle truncation/text-wrapped content

--- a/Examples/CustomViz/src/visualization01/style.css
+++ b/Examples/CustomViz/src/visualization01/style.css
@@ -33,16 +33,14 @@
     --rowTextColor: #000; /*odd rows text color*/
     --rowAltTextColor: #333; /*even rows text color*/
     --rowHoverBackground: #bbb; /*row background color on hover*/
-
     --rowSelectedBackground: #9ABCEA; /*row background color when selected*/
+    --rowGroupBackground: #c7c7c7;
+    --rowGroupText: #000;
+    --rowGroupItemCountText: #000;
 
 
     --editBoxColor: #1D68CD; /*border color for edit boxes*/
     --errorColor: #dd0000; /*error indication*/
-
-    --rowGroupBackground: #c7c7c7;
-    --rowGroupText: #000;
-    --rowGroupingAltText: #000;
 }
 
 .tabulator {
@@ -996,7 +994,7 @@
 }
 
 .tabulator-row.tabulator-group span {
-    color: var(--rowGroupingAltText, #000);
+    color: var(--rowGroupItemCountText, #000);
     margin-left: 10px
 }
 
@@ -1281,124 +1279,162 @@ body.tabulator-print-fullscreen-hide>:not(.tabulator-print-fullscreen) {
 }
 
 .tabulator-print-table .tabulator-print-table-group.tabulator-group-visible .tabulator-arrow {
-    border-bottom: 0;
-    border-left: 6px solid transparent;
-    border-right: 6px solid transparent;
-    border-top: 6px solid var(--sortArrowActive, #666);
-    margin-right: 10px
+  border-bottom: 0;
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid var(--sortArrowActive, #666);
+  margin-right: 10px
 }
 
 .tabulator-print-table .tabulator-print-table-group.tabulator-group-level-1 td {
-    padding-left: 30px !important
+  padding-left: 30px !important
 }
 
 .tabulator-print-table .tabulator-print-table-group.tabulator-group-level-2 td {
-    padding-left: 50px !important
+  padding-left: 50px !important
 }
 
 .tabulator-print-table .tabulator-print-table-group.tabulator-group-level-3 td {
-    padding-left: 70px !important
+  padding-left: 70px !important
 }
 
 .tabulator-print-table .tabulator-print-table-group.tabulator-group-level-4 td {
-    padding-left: 90px !important
+  padding-left: 90px !important
 }
 
 .tabulator-print-table .tabulator-print-table-group.tabulator-group-level-5 td {
-    padding-left: 110px !important
+  padding-left: 110px !important
 }
 
 .tabulator-print-table .tabulator-print-table-group .tabulator-group-toggle {
-    display: inline-block
+  display: inline-block
 }
 
 .tabulator-print-table .tabulator-print-table-group .tabulator-arrow {
-    border-bottom: 6px solid transparent;
-    border-left: 6px solid var(--sortArrowActive, #666);
-    border-right: 0;
-    border-top: 6px solid transparent;
-    display: inline-block;
-    height: 0;
-    margin-right: 16px;
-    vertical-align: middle;
-    width: 0
+  border-bottom: 6px solid transparent;
+  border-left: 6px solid var(--sortArrowActive, #666);
+  border-right: 0;
+  border-top: 6px solid transparent;
+  display: inline-block;
+  height: 0;
+  margin-right: 16px;
+  vertical-align: middle;
+  width: 0
 }
 
 .tabulator-print-table .tabulator-print-table-group span {
-    color: #d00;
-    margin-left: 10px
+  color: #d00;
+  margin-left: 10px
 }
 
 .tabulator-print-table .tabulator-data-tree-control {
-    align-items: center;
-    background: rgba(0, 0, 0, .1);
-    border: 1px solid var(--rowTextColor, #333);
-    border-radius: 2px;
-    display: inline-flex;
-    height: 11px;
-    justify-content: center;
-    margin-right: 5px;
-    overflow: hidden;
-    vertical-align: middle;
-    width: 11px
+  align-items: center;
+  background: rgba(0, 0, 0, .1);
+  border: 1px solid var(--rowTextColor, #333);
+  border-radius: 2px;
+  display: inline-flex;
+  height: 11px;
+  justify-content: center;
+  margin-right: 5px;
+  overflow: hidden;
+  vertical-align: middle;
+  width: 11px
 }
 
 @media (hover:hover) and (pointer:fine) {
-    .tabulator-print-table .tabulator-data-tree-control:hover {
-        background: rgba(0, 0, 0, .2);
-        cursor: pointer
-    }
+  .tabulator-print-table .tabulator-data-tree-control:hover {
+      background: rgba(0, 0, 0, .2);
+      cursor: pointer
+  }
 }
 
 .tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-collapse {
-    background: transparent;
-    display: inline-block;
-    height: 7px;
-    position: relative;
-    width: 1px
+  background: transparent;
+  display: inline-block;
+  height: 7px;
+  position: relative;
+  width: 1px
 }
 
 .tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-collapse:after {
-    background: var(--rowTextColor, #333);
-    content: "";
-    height: 1px;
-    left: -3px;
-    position: absolute;
-    top: 3px;
-    width: 7px
+  background: var(--rowTextColor, #333);
+  content: "";
+  height: 1px;
+  left: -3px;
+  position: absolute;
+  top: 3px;
+  width: 7px
 }
 
 .tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand {
-    background: var(--rowTextColor, #333);
-    display: inline-block;
-    height: 7px;
-    position: relative;
-    width: 1px
+  background: var(--rowTextColor, #333);
+  display: inline-block;
+  height: 7px;
+  position: relative;
+  width: 1px
 }
 
 .tabulator-print-table .tabulator-data-tree-control .tabulator-data-tree-control-expand:after {
-    background: var(--rowTextColor, #333);
-    content: "";
-    height: 1px;
-    left: -3px;
-    position: absolute;
-    top: 3px;
-    width: 7px
+  background: var(--rowTextColor, #333);
+  content: "";
+  height: 1px;
+  left: -3px;
+  position: absolute;
+  top: 3px;
+  width: 7px
 }
 
-/* Display a check icon within a matrix cell when it is editable and focused */
-.ph--check-square-fill:before {
-    display: inline-block;
-    content: "\f070 "; /*"\f00e "; */
-    font: 14px / 1 DXIcons;
-    width: 1em;
-    height: 1em;
+/* Display a check icon */
+.icon--container {
+  display: block;
+  position: relative;
+  cursor: pointer;
+  font-size: 15px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+  
+.icon--checkmark-box {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #eee; 
+  border: solid black;
+  border-width: 1px 1px 1px 1px;
+}
+  
+.icon--checkmark-box-checked {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 15px;
+  width: 15px;
+  background-color: #1fdf1f;
+  border: solid black;
+  border-width: 1px 1px 1px 1px;
 }
 
-.ph--square-bold:before {
-    display: inline-block;
-    content: "\f071 "; /*"\f00e "; */
-    font: 14px / 1 DXIcons;
-    width: 1em;
-    height: 1em;
+.icon--checkmark-tick-hidden {
+  display: none;
+}
+  
+.icon--checkmark-tick {
+  display: inline-block;
+  margin-left: 4px;
+  margin-bottom: 2px;
+  width: 4px;
+  height: 8px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
+}
+
+.icon--title {
+	margin-left: 1.55em;
 }
